uzd apraksta kļūda 10a uzdevumā no 9a satura kopēšanas

--- a/10a_dd22051.html
+++ b/10a_dd22051.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!--DGAAP 9a uzdevums, Dace Anna Dille dd22051
-  9a) Izstrādāt datorprogrammu, kas realizē kontrasta palielināšanas transformāciju.
+  <!--DGAAP 10a uzdevums, Dace Anna Dille dd22051
+  10a) Izstrādāt datorprogrammu, kas realizē izpludināšanas un asināšanas filtrus un, lietojot gamma korekciju,
+  nodrošina fizikāli korektu rezultējošo intensitātes līmeni.
   ____
   Tiek izmantots attēls varna1.jpg.
   -->
