--- a/10a_dd22051.html
+++ b/10a_dd22051.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <!--DGAAP 10a uzdevums, Dace Anna Dille dd22051
-  10a) Izstrādāt datorprogrammu, kas realizē izpludināšanas un asināšanas filtrus un, lietojot gamma korekciju,
-  nodrošina fizikāli korektu rezultējošo intensitātes līmeni.
+  10a) Izstrādāt datorprogrammu, kas realizē izpludināšanas un asināšanas filtrus pie dažādu izmēru konvolūcijas maskām. 
   ____
   Tiek izmantots attēls varna1.jpg.
   -->
